--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "csv exporter"
   ],
   "dependencies": {
-    "lodash.get": "^4.4.2",
-    "lodash.pick": "^4.4.0"
+    "lodash": "^4.17.15"
   },
   "scripts": {
     "lint": "standard",
@@ -27,7 +26,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.5.3",
+    "mocha": "^6.2.0",
     "standard": "^10.0.3",
     "watch-run": "^1.2.5"
   },
